--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,131 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+nav {
+  position: relative;
+  top: 0;
+  z-index: 100;
+}
+
+.container {
+  flex: 1;
+  margin: 0 1em;
+}
+
+app-root {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+footer {
+  position: relative;
+  bottom: 0;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.nav-icon-btn, .nav-icon-btn:visited {
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0);
+  border: solid 0.1em rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  vertical-align: center;
+  width: 7em;
+  height: 7em;
+  user-select: none;
+  user-focus: none;
+  transition: 0.3s;
+}
+
+.nav-icon-btn:hover {
+  cursor: pointer;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 0.1);
+  border: solid 0.2em rgba(255, 255, 255, 1);
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+.nav-icon-btn:hover + .nav-text {
+  color: rgba(255, 255, 255, 1);
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+.nav-icon-btn:hover + .underline-middle:before {
+  visibility: visible;
+  transform: scaleX(1);
+  background-color: rgba(255, 255, 255, 1);
+  transition: 0.3s;
+}
+
+.nav-text {
+  color: rgba(255, 255, 255, 0.5);
+  user-select: none;
+  transition: 0.3s;
+}
+
+.underline-middle
+{
+  position: relative;
+}
+
+.underline-middle:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.09em;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.2s ease-in-out;
+}
+
+.underline-left
+{
+  position: relative;
+}
+
+.underline-left:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #FFF;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.white-text {
+  color: rgba(255, 255, 255, 1);
+}
+
+.gray-text {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+}
+
+.animate-flicker {
+  animation: fadeIn 3s infinite alternate;
+}
+
+.page-info-dialog {
+  opacity: 0.95;
+}
