Added API service endpoint to fetch coffee makers.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="content">
     <p>home works!</p>
+    <div *ngFor="let coffee of coffeeMakers$ | async">{{coffee.manufacturer}} {{coffee.model}}</div>
 </div>
