--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav [@transitionAnimations]>
     <mat-toolbar class="nav-toolbar clear">
-        <div routerLink="" routerLinkActive="active" class="logo-button">COFFEE {{production ? null : "("+env+")"}}</div>
+        <div routerLink="" routerLinkActive="active" class="logo-button"><i class="fas fa-coffee"></i> COFFEE {{production ? null : "("+env+")"}}</div>
         <span class="spacer"></span>
     </mat-toolbar>
 </nav>
